add documentation for all the endpoints
